--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -995,6 +995,7 @@ span.vc_tta-title-text.display-none-accordion{
                 }
             }
             h2 {
+                color: $black;
                 @media screen and (max-width: 768px) {
                     font-size: 5.5vw;
                 }
@@ -1025,6 +1026,7 @@ span.vc_tta-title-text.display-none-accordion{
     div.page-bg-color {
         div {
             .title-mobile{
+                color: $black;
                 text-transform: uppercase;
                 border-bottom: none;
                 padding-left: 30px;
@@ -1096,8 +1098,10 @@ span.vc_tta-title-text.display-none-accordion{
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -5%);
+                color: $black;
+                margin: 10px !important;
                 &:first-child {
-                    margin-top: 25px;
+                    margin-top: 20px !important;
                 }
             }
         }
@@ -1125,6 +1129,7 @@ span.vc_tta-title-text.display-none-accordion{
                 }
             }
             h2 {
+                color: $black;
                 @media screen and (max-width: 768px) {
                     font-size: 5.5vw;
                 }
@@ -1137,6 +1142,16 @@ span.vc_tta-title-text.display-none-accordion{
                             margin-left: 0;
                         }
                     }
+                }
+            }
+        }
+    }
+    div {
+        #mk-tabs-tabs-4{
+            li {
+                a {
+                    text-transform: uppercase;
+                    color: $black;
                 }
             }
         }
@@ -1163,6 +1178,87 @@ span.vc_tta-title-text.display-none-accordion{
                                     }
                                 }
                             }
+                        }
+                    }
+                    .mobile-nav-tab-container {
+                        ul {
+                            li {
+                                a {
+                                    text-transform: uppercase;
+                                    color: $black;
+                                    &:hover {
+                                        color: $black;
+                                    }
+                                }
+                            }
+                        }
+                        div {
+                            div {
+                                h4 {
+                                    a {
+                                        @extend %link-hover-effect; 
+                                        color: $black;
+                                        &:hover {
+                                            color: $black;
+                                        }
+                                        @media screen and (max-width: 768px) {
+                                            font-size: calc(1.5vw + 0.5em);
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+// === PROGRAMS FRONT-PAGE STYLINE === //
+
+.programs-front-row {
+    margin-top: 125px;
+    @media screen and (max-width: 768px) {
+        margin-top: 10px;
+    }
+    .programs-tabs-link-column {
+        div {
+            h4 {
+                margin-bottom: 20px;
+                a {
+                    color: $black;
+                }
+            }
+        }
+    }
+    .column_container {
+        div {
+            h2 {
+                color: $black;
+                @media screen and (max-width: 768px) {
+                    font-size: 5.5vw;
+                }
+            }
+            p {
+                color: $black;
+                padding-left: 3%;
+            }
+        }
+    }
+}
+
+.programs-zebra-row {
+    margin-top: 25px;
+    .about-zebra-border-column {
+        div {
+            figure {
+                div {
+                    img {
+                        left: -185px;
+                        @media screen and (max-width: 768px) {
+                            left: -85px;
                         }
                     }
                 }
